@@ -17,6 +17,7 @@ Version 1.5.0
   * searching refactoring
   * don't crash application when vim window failed or formiko icon not found
   * right working with formating and extensions by mime type
+  * right margin settings
 
 Version 1.4.3
 
